--- a/lib/csharp-models-to-json_test/csharp-models-to-json_test.csproj
+++ b/lib/csharp-models-to-json_test/csharp-models-to-json_test.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>CSharpModelsToJsonTest</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis" Version="2.6.1" />
