--- a/lib/csharp-models-to-json_test/csharp-models-to-json_test.csproj
+++ b/lib/csharp-models-to-json_test/csharp-models-to-json_test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis" Version="2.6.1" />
@@ -10,9 +10,6 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\csharp-models-to-json\csharp-models-to-json.csproj">
-      <Project>{BAEFF23F-0CE8-48B5-899A-56251439C30C}</Project>
-      <Name>csharp-models-to-json</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\csharp-models-to-json\csharp-models-to-json.csproj" />
   </ItemGroup>
 </Project>
