update to net6.0 lts

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ lib/csharp-models-to-json_test/bin/
 
 .vscode/*
 .idea/*
+/.vs
+/lib/csharp-models-to-json/.vs/csharp-models-to-json/FileContentIndex
