GitHub Actions with workflows tests
(cherry picked from commit 9a7a6ecc3e59179971fd5e47bdc516a583c71861)

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "bin": {
     "csharp-models-to-typescript": "./index.js"
   },
+  "scripts": {
+	  "test": "node index.js --config=./test-files/test-config.json && node ./test-files/test-file-exists.js --config=./test-files/test-config.json"
+  },
   "dependencies": {
     "camelcase": "^6.0.0"
   }
