Delete output file before test

--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "csharp-models-to-typescript": "./index.js"
   },
   "scripts": {
-	  "test": "node index.js --config=./test-files/test-config.json && node ./test-files/test-file-exists.js --config=./test-files/test-config.json"
+    "test": "rimraf -I ./test-files/api.d.ts && node index.js --config=./test-files/test-config.json && node ./test-files/test-file-exists.js --config=./test-files/test-config.json"
   },
   "dependencies": {
     "camelcase": "^6.0.0"
+  },
+  "devDependencies": {
+    "rimraf": "^5.0.7"
   }
 }
